adds ingestion of mp3 files in web client for testing
